--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "ao-redstone-oracle",
   "type": "module",
   "scripts": {
-    "ao-cli": "curl -L https://arweave.net/BVhXa-OCcQV6xuhsoS6207uHkXcRz4UmR5xvQct1GXI | bash",
+    "ao-cli": "curl -L https://install_ao.g8way.io | bash",
     "test": "node build.js && vitest",
     "build": "cd redstone-oracle-process && ao build && mkdir -p dist && mv process.wasm dist/",
+    "deploy": "ao publish redstone-oracle-process/dist/process.wasm -w .secrets/wallet.json -t Memory-Limit -v 1-gb -t Compute-Limit -v 9000000000000 -t Module-Format -v wasm64-unknown-emscripten-draft_2024_02_15",
     "loader-issue": "cd test-process && ao build && node --experimental-wasm-memory64 process.helper.mjs"
   },
   "dependencies": {
-    "redstone-sdk": "^1.8.2",
+    "@redstone-finance/sdk": "0.5.4",
     "@permaweb/aoconnect": "^0.0.56"
   },
   "devDependencies": {
     "@permaweb/ao-loader": "0.0.35",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "warp-contracts": "^1.4.45",
+    "warp-contracts-plugin-deploy": "^1.0.13"
   }
 }
